--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ section {
 
 body {
   margin: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -5478,6 +5478,111 @@ a.badge-dark.focus {
   margin-left: 10px;
   margin-bottom: 10px;
 }
+.text-product-title1 {
+  position: absolute;
+  bottom: 0;
+  opacity: 0;
+  margin-left: 10px;
+  margin-bottom: 10px;
+  transition: 0.5s;
+}
+.youtube-link1 {
+  justify-content: center;
+  display: flex;
+}
+.youtube-svg::after {
+  content: "";
+  position: absolute;
+  width: 1px;
+  height: 30%;
+  bottom: 5%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.youtube-svg img {
+  margin-right: 15px;
+  width: 200px;
+}
+.youtube-link1 span {
+  margin-top: 14px;
+  font-size: 18px;
+  font-family: "Montserrat", sans-serif;
+  color: #444;
+  font-weight: 500;
+  margin-left: 15px;
+  transition: 0.5s;
+}
+.youtube-link1:hover span {
+  color: #ff7c46;
+}
+.item-youtube img {
+  width: 100%;
+  transition: 1s;
+}
+.youtube-products::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  opacity: 0;
+}
+.youtube-products span {
+  color: #444;
+  font-size: 15px;
+  font-weight: 500;
+  font-family: "Montserrat", sans-serif;
+  line-height: 1.4;
+}
+.youtube-products {
+  transition: 1s;
+}
+.youtube-icon img {
+  width: 60px;
+}
+.youtube-icon::after {
+  content: "";
+  height: 65%;
+  width: 1px;
+  position: absolute;
+  bottom: 20%;
+  right: 6%;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+.youtube-products:hover {
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.youtube-products .item-youtube {
+  overflow: hidden;
+}
+
+.youtube-products:hover .thumbnail-img {
+  -webkit-transform: scale(1.15);
+  transform: scale(1.1);
+}
+.company-container {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+.company-image {
+  margin: 40px 90px;
+  padding: 80px 60px 30px;
+  background-color: white;
+}
+.company-video {
+  margin: 40px 90px;
+}
+.title-sub {
+  width: 100%;
+  margin-top: 50px;
+  text-transform: uppercase;
+  text-align: center;
+  color: #7e8387;
+  font-size: 36px;
+  font-weight: 700;
+  font-family: "Montserrat", sans-serif;
+}
+.company-organization {
+  margin: 40px 20px;
+}
 .text-product-title h2 {
   font-size: 36px;
   font-family: "Montserrat", sans-serif;
@@ -5485,7 +5590,44 @@ a.badge-dark.focus {
   text-transform: uppercase;
   color: white;
 }
+.company-partner {
+  margin: 40px 90px;
+  width: 100%;
+}
+.company-partner-container {
+  background-image: url("../images/about/bg.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+}
+.company-partner img {
+  padding: 20px;
+  border: 1px solid #fff;
+}
+.company-partner h4 {
+  font-size: 18px;
+  font-weight: 400;
+  color: #444;
+  text-transform: uppercase;
+  font-family: "Montserrat", sans-serif;
+  text-align: center;
+  margin-top: 15px;
+}
+
 .text-product-title span {
+  width: 160px;
+  display: block;
+  font-size: 14px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  text-transform: uppercase;
+  text-align: center;
+  color: white;
+  padding: 10px 0;
+  background-color: #7e8387;
+}
+.text-product-title1 span {
   width: 160px;
   display: block;
   font-size: 14px;
@@ -5503,6 +5645,18 @@ a.badge-dark.focus {
 .big-products:hover .item-big {
   border: 12px solid #7e8387;
 }
+.big-products:hover .text-product-title1 {
+  opacity: 1;
+}
+.space-container h1 {
+  font-size: 36px;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-family: "Montserrat", sans-serif;
+  text-align: center;
+  color: #ff7c46;
+}
+
 /* End Style */
 
 .alert-light {
